fixed project page main offer - aligned center

--- a/styles/pages/ProjectPage.module.sass
+++ b/styles/pages/ProjectPage.module.sass
@@ -28,12 +28,11 @@
         background: linear-gradient(rgba(0,0,0, 0), rgba(0,0,0, .8) 90%)
 
 .project_info
-    position: absolute
     z-index: 30
     display: flex
     flex-direction: column
     align-items: center
-    margin: 30px 15px
+    margin: 30px 0
     img
         max-width: 200px
         width: 100%
@@ -44,7 +43,8 @@
         display: flex
         flex-direction: column
         align-items: center
-        min-width: 280px
+        max-width: max-content
+        width: 100%
         &::before
             content: ''
             position: absolute
@@ -60,7 +60,6 @@
             margin-bottom: 15px
         p
             font-size: 20px
-            max-width: 415px
             font-weight: 100
             color: #EDEDED
 
